--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "webhook-para-envio-de-email",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "sistema que espera uma requisição vinda com informações de envio de email",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "test": "npm test",
-    "dev": "nodemon ./src/index.js"
+    "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" ./src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -21,11 +21,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "joi": "^17.11.0",
+    "nodemailer": "^6.9.7",
     "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.9",
+    "@types/nodemailer": "^6.4.13",
     "@types/supertest": "^2.0.15",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
