--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "joi": "^17.11.0",
-    "nodemailer": "^6.9.7",
-    "yup": "^1.3.2"
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
