--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "commonjs",
   "scripts": {
     "test": "npm test",
-    "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" ./src/index.ts"
+    "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" ./src/index.ts",
+    "start": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" ./src/index.ts"
   },
   "repository": {
     "type": "git",
