--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm test",
     "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" ./src/index.ts",
-    "start": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" ./src/index.ts"
+    "start": "node --watch \"src/**/*.ts\" --exec \"ts-node\" ./src/index.ts"
   },
   "repository": {
     "type": "git",
