--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npm test",
     "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" ./src/index.ts",
-    "start": "node --watch \"src/**/*.ts\" --exec \"ts-node\" ./src/index.ts"
+    "build": "tsc",
+    "start": "node  ./build/index.js"
   },
   "repository": {
     "type": "git",
