--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npm test",
     "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" ./src/index.ts",
-    "start": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" ./src/index.ts"
+    "build": "tsc",
+    "start": "node ./build/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,8 @@
   },
   "homepage": "https://github.com/LuanCLF/Email-Sender-Api#readme",
   "dependencies": {
+    "@types/cors": "^2.8.16",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
